--- a/public/scss/_prizes.scss
+++ b/public/scss/_prizes.scss
@@ -58,6 +58,10 @@
       }
       &.empty {
         background-color: transparent;
+        @media (max-width: 576px) {
+          display: none;
+        }
+
       }
       .category {
         margin-top: 20px;
